--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.letrungson.qlkcl">
    <application
-        android:label="qlkcl"
+        android:label="QLKCL"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
