--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
-  flutter_svg: ^0.23.0+1
   charts_flutter: ^0.11.0
+  websafe_svg: ^2.0.0
 
 dev_dependencies:
   flutter_test:
