--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   provider: ^6.0.1
   charts_flutter: ^0.11.0
   websafe_svg: ^2.0.0
+  qr_flutter: ^4.0.0
+  barcode_scan2: ^4.1.4
 
 dev_dependencies:
   flutter_test:
