--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,14 @@ dependencies:
   charts_flutter: ^0.11.0
   websafe_svg: ^2.0.0
   qr_flutter: ^4.0.0
-  # barcode_scan2: ^4.1.4
   qr_code_scanner: ^0.5.2
+  flutter_native_splash: ^1.2.3
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "^0.9.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -87,3 +87,9 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/Logo.png"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/Logo.png
+  fullscreen: true
+  
