--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,16 @@ dependencies:
   qr_code_scanner: ^0.5.2
   flutter_native_splash: ^1.2.3
   flutter_launcher_icons: ^0.9.2
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.6
+  flutter_secure_storage: ^5.0.0-beta.5
 
 dev_dependencies:
+  build_runner: ^2.1.4
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.1
 
 
 # For information on the generic Dart part of this file, see the
