--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.0-beta.5
   modal_bottom_sheet: ^2.0.0
+  focus_detector: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.1.4
