--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   dropdown_search: ^2.0.0
   dio: ^4.0.1
+  pin_code_fields: ^7.3.0
 
 dev_dependencies:
   build_runner: ^2.1.4
