--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.0.0-nullsafety.1
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -46,6 +44,8 @@ dependencies:
   dropdown_search: ^2.0.0
   dio: ^4.0.1
   pin_code_fields: ^7.3.0
+  url_launcher: ^6.0.0-nullsafety.1
+  dotted_border: ^2.0.0+1
 
 dev_dependencies:
   build_runner: ^2.1.4
