--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pin_code_fields: ^7.3.0
   url_launcher: ^6.0.0-nullsafety.1
   dotted_border: ^2.0.0+1
+  image_picker: ^0.8.3+3
 
 dev_dependencies:
   build_runner: ^2.1.4
