--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
-  charts_flutter:
-    git:
-      url: git://github.com/google/charts.git
-      path: charts_flutter
+  charts_flutter: ^0.12.0
   websafe_svg: ^2.0.0
   qr_flutter: ^4.0.0
   qr_code_scanner: ^0.5.2
@@ -46,6 +43,7 @@ dependencies:
   dropdown_search: ^2.0.0
   dio: ^4.0.1
   pin_code_fields: ^7.3.0
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   build_runner: ^2.1.4
