--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.0.0-nullsafety.1
   dotted_border: ^2.0.0+1
   image_picker: ^0.8.3+3
+  flutter_easyloading: ^3.0.3
 
 dev_dependencies:
   build_runner: ^2.1.4
