--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   hive: ^2.0.4
   hive_flutter: ^1.1.0
-  flutter_secure_storage: ^5.0.0-beta.5
   modal_bottom_sheet: ^2.0.0
   carousel_slider: ^4.0.0
   dropdown_search: ^2.0.0
@@ -45,6 +44,7 @@ dependencies:
   url_launcher: ^6.0.0-nullsafety.1
   dotted_border: ^2.0.0+1
   image_picker: ^0.8.3+3
+  connectivity: ^3.0.6
   flutter_easyloading: ^3.0.3
 
 dev_dependencies:
