--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.3+3
   connectivity: ^3.0.6
   flutter_easyloading: ^3.0.3
+  infinite_scroll_pagination: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.1.4
