--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,5 +106,6 @@ flutter_icons:
 flutter_native_splash:
   color: "#ffffff"
   image: assets/images/Logo.png
+  web: false
   fullscreen: true
   
