--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_easyloading: ^3.0.3
   infinite_scroll_pagination: ^3.1.0
   connectivity_plus: ^2.1.0
+  google_ml_kit: ^0.7.3
+  qr_code_tools:
+  rxdart:
 
 dev_dependencies:
   build_runner: ^2.1.4
