--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,10 @@ dependencies:
   flutter_easyloading: ^3.0.3
   infinite_scroll_pagination: ^3.1.0
   connectivity_plus: ^2.1.0
-  google_ml_kit: ^0.7.3
-  qr_code_tools:
-  rxdart:
+  # google_ml_kit: ^0.7.3
+  onesignal_flutter: ^3.2.7
+  qr_code_tools: ^0.0.7
+  rxdart: ^0.27.3
 
 dev_dependencies:
   build_runner: ^2.1.4
