--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   onesignal_flutter: ^3.2.7
   qr_code_tools: ^0.0.7
   rxdart: ^0.27.3
+  syncfusion_flutter_datepicker: ^19.4.42
 
 dev_dependencies:
   build_runner: ^2.1.4
