--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   image_picker: ^0.8.3+3
   flutter_easyloading: ^3.0.3
   infinite_scroll_pagination: ^3.1.0
-  connectivity_plus: ^2.1.0
+  # connectivity_plus: ^2.1.0
   # google_ml_kit: ^0.7.3
   onesignal_flutter: ^3.2.7
   qr_code_tools: ^0.0.7
