--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   qr_code_tools: ^0.0.7
   rxdart: ^0.27.3
   syncfusion_flutter_datepicker: ^19.4.42
+  cloudinary_public: ^0.11.0
 
 dev_dependencies:
   build_runner: ^2.1.4
