--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   rxdart: ^0.27.3
   syncfusion_flutter_datepicker: ^19.4.42
   cloudinary_public: ^0.11.0
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   build_runner: ^2.1.4
