--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^19.4.42
   cloudinary_public: ^0.11.0
   url_strategy: ^0.2.0
+  badges: ^2.0.2
 
 dev_dependencies:
   build_runner: ^2.1.4
