--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cloudinary_public: ^0.11.0
   url_strategy: ^0.2.0
   badges: ^2.0.2
+  flutter_speed_dial: ^5.0.0+1
 
 dev_dependencies:
   build_runner: ^2.1.4
