--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   url_launcher: ^6.0.0-nullsafety.1
   dotted_border: ^2.0.0+1
   image_picker: ^0.8.3+3
-  flutter_easyloading: ^3.0.3
+  # flutter_easyloading: ^3.0.3
   infinite_scroll_pagination: ^3.1.0
   # connectivity_plus: ^2.1.0
   # google_ml_kit: ^0.7.3
@@ -56,6 +56,7 @@ dependencies:
   url_strategy: ^0.2.0
   badges: ^2.0.2
   flutter_speed_dial: ^5.0.0+1
+  bot_toast: ^4.0.1
 
 dev_dependencies:
   build_runner: ^2.1.4
