--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   badges: ^2.0.2
   flutter_speed_dial: ^5.0.0+1
   bot_toast: ^4.0.1
+  responsive_framework: ^0.1.7
+  # shimmer: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.1.4
