fix null safety qr_code_tools package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,10 @@ dependencies:
   # connectivity_plus: ^2.1.0
   # google_ml_kit: ^0.7.3
   onesignal_flutter: ^3.2.7
-  qr_code_tools: ^0.0.7
+  qr_code_tools:
+    git:
+      url: https://github.com/lesonlhld/qr_code_tools.git
+      ref: 0.0.7-nullsafety.0
   rxdart: ^0.27.3
   syncfusion_flutter_datepicker: ^19.4.42
   cloudinary_public: ^0.11.0
