--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
-  charts_flutter: ^0.12.0
   websafe_svg: ^2.0.0
   qr_flutter: ^4.0.0
   qr_code_scanner: ^0.7.0
@@ -44,10 +43,8 @@ dependencies:
   url_launcher: ^6.0.0-nullsafety.1
   dotted_border: ^2.0.0+1
   image_picker: ^0.8.3+3
-  # flutter_easyloading: ^3.0.3
   infinite_scroll_pagination: ^3.1.0
   # connectivity_plus: ^2.1.0
-  # google_ml_kit: ^0.7.3
   onesignal_flutter: ^3.2.7
   qr_code_tools:
     git:
@@ -63,6 +60,7 @@ dependencies:
   responsive_framework: ^0.1.7
   side_navigation: ^0.0.7
   syncfusion_flutter_datagrid: ^19.4.55
+  syncfusion_flutter_charts: ^19.4.56
   # shimmer: ^2.0.0
 
 dev_dependencies:
