add quarantine ward map

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   side_navigation: ^0.0.7
   syncfusion_flutter_datagrid: ^19.4.55
   syncfusion_flutter_charts: ^19.4.56
+  syncfusion_flutter_maps: ^19.4.56-beta
   # shimmer: ^2.0.0
 
 dev_dependencies:
