--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.1
+  lints: ^1.0.1
 
 
 # For information on the generic Dart part of this file, see the
