--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -51,7 +51,7 @@ linter:
 #     - parameter_assignments
 #     - prefer_asserts_in_initializer_lists
 # #   - prefer_const_constructors
-#     - prefer_const_constructors_in_immutables
+    - prefer_const_constructors_in_immutables
 # #   - prefer_const_declarations #under review (see #1068)
 # #   - prefer_const_literals_to_create_immutables #under review (see #1068)
 #     - prefer_constructors_over_static_methods
