--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -134,29 +134,29 @@ linter:
     - prefer_foreach
     # - prefer_function_declarations_over_variables
     # - prefer_generic_function_type_aliases
-    # - prefer_if_elements_to_conditional_expressions
-    # - prefer_if_null_operators
-    # - prefer_initializing_formals
-    # - prefer_inlined_adds
-    # - prefer_int_literals
-    # - prefer_interpolation_to_compose_strings
-    # - prefer_is_empty
-    # - prefer_is_not_empty
-    # - prefer_is_not_operator
-    # - prefer_iterable_whereType
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_if_null_operators
+    - prefer_initializing_formals
+    - prefer_inlined_adds
+    - prefer_int_literals
+    - prefer_interpolation_to_compose_strings
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - prefer_is_not_operator
+    - prefer_iterable_whereType
     # - prefer_mixin
     - prefer_null_aware_method_calls
-    # - prefer_null_aware_operators
+    - prefer_null_aware_operators
     # - prefer_relative_imports
     # - prefer_single_quotes
-    # - prefer_spread_collections
-    # - prefer_typing_uninitialized_variables
-    # - prefer_void_to_null
-    # - provide_deprecation_message
+    - prefer_spread_collections
+    - prefer_typing_uninitialized_variables
+    - prefer_void_to_null
+    - provide_deprecation_message
     # - public_member_api_docs
-    # - recursive_getters
+    - recursive_getters
     # - require_trailing_commas
-    # - secure_pubspec_urls
+    - secure_pubspec_urls
     - sized_box_for_whitespace
     - sized_box_shrink_expand
     - slash_for_doc_comments
