--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,16 +21,16 @@ linter:
     # - avoid_catches_without_on_clauses
     - avoid_catching_errors
     # - avoid_classes_with_only_static_members
-    # - avoid_double_and_int_checks
+    - avoid_double_and_int_checks
     # - avoid_dynamic_calls
-    # - avoid_empty_else
+    - avoid_empty_else
     # - avoid_equals_and_hash_code_on_mutable_classes
     # - avoid_escaping_inner_quotes
     # - avoid_field_initializers_in_const_classes
-    # - avoid_final_parameters
+    - avoid_final_parameters
     # - avoid_function_literals_in_foreach_calls
     # - avoid_implementing_value_types
-    # - avoid_init_to_null
+    - avoid_init_to_null
     # - avoid_js_rounded_ints
     # - avoid_multiple_declarations_per_line
     # - avoid_null_checks_in_equality_operators
@@ -43,61 +43,61 @@ linter:
     # - avoid_return_types_on_setters
     # - avoid_returning_null
     # - avoid_returning_null_for_future
-    # - avoid_returning_null_for_void
+    - avoid_returning_null_for_void
     - avoid_returning_this
     - avoid_setters_without_getters
     # - avoid_shadowing_type_parameters
     # - avoid_single_cascade_in_expression_statements
     - avoid_slow_async_io
-    # - avoid_type_to_string
+    - avoid_type_to_string
     # - avoid_types_as_parameter_names
     # - avoid_types_on_closure_parameters
-    # - avoid_unnecessary_containers
+    - avoid_unnecessary_containers
     # - avoid_unused_constructor_parameters
     # - avoid_void_async
     # - avoid_web_libraries_in_flutter
-    # - await_only_futures
-    # - camel_case_extensions
-    # - camel_case_types
+    - await_only_futures
+    - camel_case_extensions
+    - camel_case_types
     - cancel_subscriptions
     # - cascade_invocations
     - cast_nullable_to_non_nullable
-    # - close_sinks
+    - close_sinks
     - comment_references
-    # - conditional_uri_does_not_exist
-    # - constant_identifier_names
-    # - control_flow_in_finally
-    # - curly_braces_in_flow_control_structures
+    - conditional_uri_does_not_exist
+    - constant_identifier_names
+    - control_flow_in_finally
+    - curly_braces_in_flow_control_structures
     # - depend_on_referenced_packages
-    # - deprecated_consistency
+    - deprecated_consistency
     # - diagnostic_describe_all_properties
     # - directives_ordering
-    # - do_not_use_environment
-    # - empty_catches
-    # - empty_constructor_bodies
-    # - empty_statements
-    # - eol_at_end_of_file
-    # - exhaustive_cases
-    # - file_names
-    # - flutter_style_todos
-    # - hash_and_equals
-    # - implementation_imports
+    - do_not_use_environment
+    - empty_catches
+    - empty_constructor_bodies
+    - empty_statements
+    - eol_at_end_of_file
+    - exhaustive_cases
+    - file_names
+    - flutter_style_todos
+    - hash_and_equals
+    - implementation_imports
     - invariant_booleans
-    # - iterable_contains_unrelated_type
+    - iterable_contains_unrelated_type
     - join_return_with_assignment
-    # - leading_newlines_in_multiline_strings
-    # - library_names
-    # - library_prefixes
+    - leading_newlines_in_multiline_strings
+    - library_names
+    - library_prefixes
     # - library_private_types_in_public_api
     # - lines_longer_than_80_chars
-    # - list_remove_unrelated_type
-    # - literal_only_boolean_expressions
-    # - missing_whitespace_between_adjacent_strings
+    - list_remove_unrelated_type
+    - literal_only_boolean_expressions
+    - missing_whitespace_between_adjacent_strings
     - no_adjacent_strings_in_list
-    # - no_default_cases
-    # - no_duplicate_case_values
-    # - no_leading_underscores_for_library_prefixes
-    # - no_leading_underscores_for_local_identifiers
+    - no_default_cases
+    - no_duplicate_case_values
+    - no_leading_underscores_for_library_prefixes
+    - no_leading_underscores_for_local_identifiers
     # - no_logic_in_create_state
     # - no_runtimeType_toString
     # - non_constant_identifier_names
@@ -126,9 +126,9 @@ linter:
     # - prefer_double_quotes
     # - prefer_equal_for_default_values
     # - prefer_expression_function_bodies
-    # - prefer_final_fields
-    # - prefer_final_in_for_each
-    # - prefer_final_locals
+    - prefer_final_fields
+    - prefer_final_in_for_each
+    - prefer_final_locals
     # - prefer_final_parameters
     # - prefer_for_elements_to_map_fromIterable
     - prefer_foreach
@@ -174,7 +174,7 @@ linter:
     - unnecessary_brace_in_string_interps
     - unnecessary_const
     - unnecessary_constructor_name
-    - unnecessary_final
+    # - unnecessary_final
     - unnecessary_getters_setters
     - unnecessary_lambdas
     - unnecessary_late
