--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,47 +15,47 @@ linter:
     # - always_require_non_null_named_parameters
     # - always_specify_types
     # - always_use_package_imports
-    # - annotate_overrides
+    - annotate_overrides
     - avoid_annotating_with_dynamic
-    # - avoid_bool_literals_in_conditional_expressions
+    - avoid_bool_literals_in_conditional_expressions
     # - avoid_catches_without_on_clauses
     - avoid_catching_errors
-    # - avoid_classes_with_only_static_members
+    - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
     # - avoid_dynamic_calls
     - avoid_empty_else
-    # - avoid_equals_and_hash_code_on_mutable_classes
-    # - avoid_escaping_inner_quotes
-    # - avoid_field_initializers_in_const_classes
+    - avoid_equals_and_hash_code_on_mutable_classes
+    - avoid_escaping_inner_quotes
+    - avoid_field_initializers_in_const_classes
     - avoid_final_parameters
-    # - avoid_function_literals_in_foreach_calls
-    # - avoid_implementing_value_types
+    - avoid_function_literals_in_foreach_calls
+    - avoid_implementing_value_types
     - avoid_init_to_null
-    # - avoid_js_rounded_ints
-    # - avoid_multiple_declarations_per_line
-    # - avoid_null_checks_in_equality_operators
+    - avoid_js_rounded_ints
+    - avoid_multiple_declarations_per_line
+    - avoid_null_checks_in_equality_operators
     - avoid_positional_boolean_parameters
     # - avoid_print
-    # - avoid_private_typedef_functions
+    - avoid_private_typedef_functions
     - avoid_redundant_argument_values
     # - avoid_relative_lib_imports
-    # - avoid_renaming_method_parameters
-    # - avoid_return_types_on_setters
-    # - avoid_returning_null
-    # - avoid_returning_null_for_future
+    - avoid_renaming_method_parameters
+    - avoid_return_types_on_setters
+    - avoid_returning_null
+    - avoid_returning_null_for_future
     - avoid_returning_null_for_void
     - avoid_returning_this
     - avoid_setters_without_getters
-    # - avoid_shadowing_type_parameters
-    # - avoid_single_cascade_in_expression_statements
+    - avoid_shadowing_type_parameters
+    - avoid_single_cascade_in_expression_statements
     - avoid_slow_async_io
     - avoid_type_to_string
-    # - avoid_types_as_parameter_names
+    - avoid_types_as_parameter_names
     # - avoid_types_on_closure_parameters
     - avoid_unnecessary_containers
-    # - avoid_unused_constructor_parameters
+    - avoid_unused_constructor_parameters
     # - avoid_void_async
-    # - avoid_web_libraries_in_flutter
+    - avoid_web_libraries_in_flutter
     - await_only_futures
     - camel_case_extensions
     - camel_case_types
@@ -98,16 +98,16 @@ linter:
     - no_duplicate_case_values
     - no_leading_underscores_for_library_prefixes
     - no_leading_underscores_for_local_identifiers
-    # - no_logic_in_create_state
-    # - no_runtimeType_toString
-    # - non_constant_identifier_names
+    - no_logic_in_create_state
+    - no_runtimeType_toString
+    - non_constant_identifier_names
     - noop_primitive_operations
-    # - null_check_on_nullable_type_parameter
-    # - null_closures
+    - null_check_on_nullable_type_parameter
+    - null_closures
     # - omit_local_variable_types
-    # - one_member_abstracts
+    - one_member_abstracts
     - only_throw_errors
-    # - overridden_fields
+    - overridden_fields
     - package_api_docs
     # - package_names
     # - package_prefixed_library_names
@@ -117,12 +117,12 @@ linter:
     # - prefer_asserts_with_message
     # - prefer_collection_literals
     # - prefer_conditional_assignment
-    # - prefer_const_constructors
+    - prefer_const_constructors
     - prefer_const_constructors_in_immutables
-    # - prefer_const_declarations
-    # - prefer_const_literals_to_create_immutables
+    - prefer_const_declarations
+    - prefer_const_literals_to_create_immutables
     - prefer_constructors_over_static_methods
-    # - prefer_contains
+    - prefer_contains
     # - prefer_double_quotes
     # - prefer_equal_for_default_values
     # - prefer_expression_function_bodies
