--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   syncfusion_flutter_datagrid: ^19.4.55
   syncfusion_flutter_charts: ^19.4.56
   syncfusion_flutter_maps: ^19.4.56-beta
+  syncfusion_flutter_datagrid_export: ^19.4.56-beta
+  syncfusion_flutter_xlsio: ^19.4.56-beta
   # shimmer: ^2.0.0
 
 dev_dependencies:
