--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   syncfusion_flutter_maps: ^19.4.56-beta
   syncfusion_flutter_datagrid_export: ^19.4.56-beta
   syncfusion_flutter_xlsio: ^19.4.56-beta
+  file_picker: ^4.5.1
   # shimmer: ^2.0.0
 
 dev_dependencies:
