--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^1.1.1
   lints: ^1.0.1
+  integration_test:
+    sdk: flutter
 
 
 # For information on the generic Dart part of this file, see the
