--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -192,7 +192,7 @@ linter:
     - unnecessary_this
     - unrelated_type_equality_checks
     - unsafe_html
-    - use_build_context_synchronously
+    # - use_build_context_synchronously
     - use_colored_box
     - use_decorated_box
     - use_enums
