add version info

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   syncfusion_flutter_xlsio: ^19.4.56-beta
   file_picker: ^4.5.1
   timelines: ^0.1.0
+  package_info_plus: ^1.4.2
   # shimmer: ^2.0.0
 
 dev_dependencies:
