--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -176,7 +176,7 @@ linter:
     - unnecessary_constructor_name
     # - unnecessary_final
     - unnecessary_getters_setters
-    - unnecessary_lambdas
+    # - unnecessary_lambdas
     - unnecessary_late
     - unnecessary_new
     - unnecessary_null_aware_assignments
