--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.16.0 <=3.0.0"
 
 dependencies:
   flutter:
@@ -29,7 +29,7 @@ dependencies:
   provider: ^6.0.1
   websafe_svg: ^2.0.0
   qr_flutter: ^4.0.0
-  qr_code_scanner: ^0.7.0
+  qr_code_scanner: 1.0.0
   flutter_native_splash: ^1.2.3
   flutter_launcher_icons: ^0.9.2
   hive: ^2.0.4
@@ -51,22 +51,22 @@ dependencies:
       url: https://github.com/lesonlhld/qr_code_tools.git
       ref: 0.0.7-nullsafety.0
   rxdart: ^0.27.3
-  syncfusion_flutter_datepicker: ^19.4.42
+  syncfusion_flutter_datepicker: 20.2.40
   cloudinary_public: ^0.11.0
   url_strategy: ^0.2.0
   badges: ^2.0.2
   flutter_speed_dial: ^5.0.0+1
   bot_toast: ^4.0.1
-  responsive_framework: ^0.1.7
+  responsive_framework: 0.2.0
   side_navigation:
     git:
       url: https://github.com/lesonlhld/side_navigation
       ref: main
-  syncfusion_flutter_datagrid: ^19.4.55
-  syncfusion_flutter_charts: ^19.4.56
-  syncfusion_flutter_maps: ^19.4.56-beta
-  syncfusion_flutter_datagrid_export: ^19.4.56-beta
-  syncfusion_flutter_xlsio: ^19.4.56-beta
+  syncfusion_flutter_datagrid: ^20.2.40
+  syncfusion_flutter_charts: 20.2.40
+  syncfusion_flutter_maps: 20.2.40
+  syncfusion_flutter_datagrid_export: 20.2.40-beta
+  syncfusion_flutter_xlsio: 20.2.40-beta
   file_picker: ^4.5.1
   timelines: ^0.1.0
   package_info_plus: ^1.4.2
@@ -77,7 +77,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.1
-  lints: ^1.0.1
+  # lints: ^1.0.1
   integration_test:
     sdk: flutter
 
